[tool.poetry]
name = "0dex"
version = "0.1.0"
description = ""
authors = ["Arne Backstein <arne.backstein@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.10"
langchain-openai = "^0.2.11"
langchain-chroma = "^0.1.4"
langchain-community = "^0.3.10"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
